Revert "background script"
This reverts commit b29ffb8b9f814b6586e5b1f8af47d899beacce2f.

--- a/mic-and-tab/manifest.json
+++ b/mic-and-tab/manifest.json
@@ -2,25 +2,10 @@
     "name": "Mic & Tab Transcription",
     "version": "1.0",
     "manifest_version": 3,
-    "permissions": [
-    "tabCapture",
-    "storage",
-    "tabs",
-    "activeTab",
-    "scripting"
-    ],
-    "background": {
-        "service_worker": "background.js"
-    },
+    "permissions": ["storage", "tabs", "scripting"],
     "action": {
         "default_popup": "popup.html"
     },
-    "content_scripts": [
-    {
-      "matches": [ "*://meet.google.com/*" ],
-      "js": ["content-script.js"]
-    }
-  ],
-  "host_permissions": [ "*://meet.google.com/*" ],
-  "options_page": "options.html"
+    "host_permissions": ["*://*/"],
+    "options_page": "options.html"
 }
