--- a/mic-and-tab/manifest.json
+++ b/mic-and-tab/manifest.json
@@ -2,7 +2,12 @@
     "name": "Mic & Tab Transcription",
     "version": "1.0",
     "manifest_version": 3,
-    "permissions": ["storage", "tabs", "scripting"],
+    "permissions": [
+        "activeTab",
+        "tabCapture",
+        "storage",
+        "tabs", 
+        "scripting"],
     "action": {
         "default_popup": "popup.html"
     },
