Audio file and transcript downloaded

--- a/mic-and-tab/manifest.json
+++ b/mic-and-tab/manifest.json
@@ -7,10 +7,17 @@
         "tabCapture",
         "storage",
         "tabs", 
-        "scripting"],
+        "scripting",
+        "downloads"],
     "action": {
         "default_popup": "popup.html"
     },
     "host_permissions": ["*://*/"],
-    "options_page": "options.html"
+    "options_page": "options.html",
+    "content_scripts": [
+        {
+          "matches": ["<all_urls>"],
+          "js": ["content-script.js"]
+        }
+      ]
 }
