--- a/mic-and-tab/manifest.json
+++ b/mic-and-tab/manifest.json
@@ -14,6 +14,9 @@
     },
     "host_permissions": ["*://*/"],
     "options_page": "options.html",
+    "background": {
+      "service_worker": "background.js"
+    },
     "content_scripts": [
         {
           "matches": ["<all_urls>"],
