--- a/mic-and-tab/manifest.json
+++ b/mic-and-tab/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Mic & Tab Transcription",
+    "name": "Meet Track AI 1.0",
     "version": "1.0",
     "manifest_version": 3,
     "permissions": [
@@ -10,6 +10,12 @@
         "scripting",
         "downloads"],
     "action": {
+        "default_icon": {
+          "16": "assets/icons/16.png",
+          "24": "assets/icons/24.png",
+          "32": "assets/icons/32.png"
+        },
+        "default_title": "Meet Track AI",
         "default_popup": "popup.html"
     },
     "host_permissions": ["*://*/"],
@@ -19,5 +25,11 @@
           "matches": ["<all_urls>"],
           "js": ["content-script.js"]
         }
-      ]
+      ],
+      "icons": {
+        "48": "assets/icons/64.png",
+        "64": "assets/icons/64.png",
+        "128": "assets/icons/128.png",
+        "256": "assets/icons/256.png"
+      }
 }
