--- a/mic-and-tab/manifest.json
+++ b/mic-and-tab/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Meet Track AI 1.0",
+    "name": "Meet Track AI",
     "version": "1.0",
     "manifest_version": 3,
     "permissions": [
