--- a/react/package.json
+++ b/react/package.json
@@ -9,9 +9,15 @@
   "license": "UNLICENSED",
   "description": "",
   "devDependencies": {
+    "@types/chrome": "^0.0.289",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "webpack": "^5.97.1",
