--- a/react/package.json
+++ b/react/package.json
@@ -1,11 +1,28 @@
 {
-  "name": "meeting-helper",
+  "name": "react-chrome-extension",
   "version": "1.0.0",
-  "description": "Meeting helper chrome extension",
-  "main": "index.js",
+  "description": "react chrome extension template",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --watch --progress --config webpack.dev.js",
+    "build": "webpack --watch --progress --config webpack.prod.js"
   },
-  "author": "Yuriy Dovhopol",
-  "license": "UNLICENSED"
+  "author": "",
+  "devDependencies": {
+    "@types/chrome": "^0.0.128",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.2.7",
+    "html-webpack-plugin": "^4.5.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-loader": "^8.4.0",
+    "typescript": "^4.9.5",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.10.0"
+  }
 }
