--- a/weather/package.json
+++ b/weather/package.json
@@ -8,17 +8,21 @@
   },
   "author": "",
   "devDependencies": {
-    "@material-ui/core": "^4.12.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.3",
     "@types/chrome": "^0.0.128",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.7",
     "fontsource-roboto": "^4.0.0",
     "html-webpack-plugin": "^4.5.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-rnd": "^10.4.14",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.4.0",
